test/spec_vectors/i32/fail/module_17.wat
(module (memory 0) (func $type-unary-operand-empty-in-load (i32.load (i32.eqz)) (drop)))